So far, unsuccessful attempts for running this on Mac M1